@@ -1,10 +1,14 @@
 pipeline {
     agent any
 
+    environment {
+        JAVA_TOOL_OPTIONS = '--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+    }
+
     stages {
         stage('Checkout') {
             steps {
-                git url: 'https://github.com/Ruchita-Presolv/Arbitration-Automation-Test-Pipeline.git', branch: 'main'
+                git url: 'https://github.com/Ruchita-Presolv/Arbitration-Automation-Test-Pipeline.git', branch: 'feature/lombok-fix'
             }
         }
 
